dark mode fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,63 @@
 
 [data-theme="night"] {
     /* Dark mode colors */
-    --background-color: black;
+    --background-color: #121212;
     --text-color: white;
     --primary-color: #ff6347;
     --link-background: black;
     --link-text: #ffffff;
-    --header-background: black;
+    --header-background: #121212;
+}
+
+[data-theme="night"] .work-sections p {
+    color: white;
+}
+
+[data-theme="night"] .work-sections h3 {
+    color: white;
+}
+
+[data-theme="night"] .work-position {
+    color: #a7a7a7;
+}
+
+[data-theme="night"] .custom-underline {
+    color: white;
+    text-decoration-color: #a7a7a7;
+}
+
+[data-theme="night"] .project h3 {
+    color: white;
+}
+
+[data-theme="night"] .project p {
+    color: #a7a7a7;
+}
+
+[data-theme="night"] .resume-button {
+    background-color: #3b3b3b;
+    border: 1px solid #525252;
+    color: white;
+}
+
+[data-theme="night"] .resume-button .button-icon {
+    filter: invert(100%);
+}
+
+[data-theme="night"] .styled-link {
+    background-color: #3b3b3b;
+    border: 1px solid #525252;
+    color: white;
+}
+
+[data-theme="night"] .styled-link .icon img {
+    filter: invert(100%);
+}
+
+[data-theme="night"] .project-buttons .btn {
+    background-color: #3b3b3b;
+    border: 1px solid #525252;
+    color: white;
 }
 
 body {
@@ -34,7 +85,6 @@ header {
     padding-bottom: 30px;
     text-align: left;
 }
-
 
 header nav ul {
     list-style-type: none;
@@ -55,6 +105,33 @@ header nav ul li a {
     font-weight: 400;
     font-size: 15px;
     color: var(--text-color);
+}
+
+#theme-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px; /* Adjust the size of the icon */
+    color: var(--text-color); /* Match the text color */
+    padding-right: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    float:right;
+}
+
+#theme-toggle img {
+    width: 22px; /* Adjust the size of the icon */
+    height: 22px;
+    transition: filter 0.3s ease; /* Smooth transition for color inversion */
+}
+
+:root[data-theme='night'] #theme-icon {
+    filter: invert(100%);
+}
+
+:root[data-theme='day'] #theme-icon {
+    filter: invert(0%);
 }
 
 main {
@@ -130,7 +207,7 @@ form button:hover {
 .styled-link {
     display: inline-flex;
     align-items: center;
-    padding: 0px 3px;
+    padding: 0px 4px;
     background-color: #f3f4f6; /* Light gray background */
     border-radius: 5px; /* Rounded corners */
     text-decoration: none; /* Remove underline from the link */
@@ -199,7 +276,7 @@ form button:hover {
 .work-sections p {
     margin-bottom: 16px;
     font-size: 14.5px;
-    color: #333;
+    color: black;
 }
 
 .work-sections ul {
@@ -222,7 +299,7 @@ h3 {
 
 .work-position {
     font-size: 13px;
-    color: #666;
+    color: #5f5f5f;
     margin-bottom: 16px;
     font-style: italic;
 }
@@ -247,14 +324,14 @@ h3 {
     display: inline-flex;
     align-items: center;
     padding: 6px 8px;
-    font-size: 14px;
+    font-size: 13px;
     color: #000; /* Initial text color */
-    background-color: #f3f4f6; /* Initial background color */
-    border: 1px solid #999; /* Darker border */
+    background-color: #fafafa; /* Initial background color */
+    border: 1px solid #e5e5e5; /* Darker border */
     border-radius: 4px; /* Rounded corners */
     text-decoration: none;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 450;
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Smooth transition */
 }
 
@@ -316,35 +393,6 @@ h3 {
     .projects-container {
         grid-template-columns: 1fr;
     }
-}
-
-/* Project Card Styling */
-.project-card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    text-align: left;
-    max-width: 350px;
-}
-
-.project-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    margin-bottom: 1rem;
-}
-
-.project-card h3 {
-    font-size: 1.4rem;
-    margin-bottom: 0.5rem;
-    color: #333;
-}
-
-.project-card p {
-    font-size: 1rem;
-    color: #666;
-    margin-bottom: 1.5rem;
 }
 
 /* Project Links */
@@ -455,6 +503,7 @@ h3 {
     font-size: 20px;
     margin: 10px 0;
     padding-left: 30px;
+    color: black;
 }
   
 .project p {
